fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body > * {
+  overflow: hidden;
+}
 #navbar {
   z-index: 10;
   width: 100vw;
